--- a/ltr-es.ipynb
+++ b/ltr-es.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All of this was adjusted from [Doug Turnbull's excellent blog](https://softwaredoug.com/blog/2021/11/28/how-lammbamart-works.html) and [his excellent notebook](https://github.com/softwaredoug/hello-ltr/blob/lambda-mart-in-python/notebooks/elasticsearch/tmdb/lambda-mart-in-python.ipynb) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -12,33 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data/tmdb.json already exists\n",
-      "data/title_judgments.txt already exists\n",
-      "Created index tmdb [Status: 200]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 27846/27846 [00:24<00:00, 1124.49it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Streaming Bulk index DONE tmdb [Status: 201]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ltr import download\n",
     "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
@@ -53,13 +46,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "# Features and Judgements\n",
+    "\n",
+    "Here we calculate our LTR features and combine them with known document & query judgements. Allowing us to combine into a larger feature training data set that includes\n",
+    "`qid`, `doc`, `features`, `ranking`\n",
+    "\n",
+    "This can then be adjusted with the \"lambdas\" for training the model!!!"
    ]
   },
   {
@@ -320,6 +315,13 @@
     "# Convert to Pandas Dataframe\n",
     "judgments = judgments_to_dataframe(ftr_logger.logged, unnest=False)\n",
     "judgments\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets calculate those lambdas!"
    ]
   },
   {
@@ -1282,6 +1284,13 @@
     "\n",
     "judgments = judgments_to_dataframe(ftr_logger.logged, unnest=False)\n",
     "lambdas_per_query = lambda_mart_pure(judgments=judgments, rounds=50, max_leaf_nodes=10, learning_rate=0.01, metric=dcg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the model from the ensemble!"
    ]
   },
   {
@@ -6891,6 +6900,13 @@
     "            target_type=\"regression\",\n",
     "        )\n",
     "es_model.serialize_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Put the model! HUZZAH!"
    ]
   },
   {
